--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ reportlab = ">=4.4.1,<5.0.0"
 openpyxl = ">=3.1.5,<4.0.0"
 pyside2 = ">=5.15.2.1,<6.0.0.0"
 numpy = ">=1.24.0,<2.0.0"
+python-dotenv = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
