--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ openpyxl = ">=3.1.5,<4.0.0"
 pyside2 = ">=5.15.2.1,<6.0.0.0"
 numpy = ">=1.24.0,<2.0.0"
 python-dotenv = "^1.1.0"
+isort = "^6.0.1"
+autopep8 = "^2.3.2"
+flake8 = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
